добавил папку с музыкой

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 <audio loop id="audioMain">
-    <source src="main-asia.mp3" type="audio/mpeg">    
+    <source src="/music/main-asia.mp3" type="audio/mpeg">    
     Проигрывание музыки не поддерживается.
 </audio>
 <div id="dialog" class="modal-dialog">
