--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 <audio loop id="audioMain">
-    <source src="/music/main-asia.mp3" type="audio/mpeg">    
+    <source src="music/main-asia.mp3" type="audio/mpeg">    
     Проигрывание музыки не поддерживается.
 </audio>
 <div id="dialog" class="modal-dialog">
@@ -29,7 +29,7 @@
 <div id="mistersuhint" class="mistersu-dialog">
     <div class="mistersu-content">
         <div id="mistersu-image" class="modal-image">
-            <img src="/pic/mister_су_pic.png" alt="mister_су_pic">
+            <img src="pic/mister_су_pic.png" alt="mister_су_pic">
         </div>       
         <div class="mistersu-header">
             <p class="modal-title">ПОДСКАЗКА МИСТЕРА СУ</p>
