--- a/index.html
+++ b/index.html
@@ -58,11 +58,15 @@
 
 <div id = "main_questions_screen_id" class="main_questions_screen">
     <div>
-        <div class="image-main-screen-cat">            
-            <img src="pic/ved_cat.png" alt="ved_screen_cat_pic">
-        </div>        
-        
-        <div style="margin-top: 20px;"><span id="timer"></span></div>
+        <div class="ved_timer">
+            <div class="image-main-screen-cat">            
+                <img src="pic/ved_cat.png" alt="ved_screen_cat_pic">
+            </div>
+
+            <div class="timer-image">
+                <div class="timer-text" id="timer">0</div>
+            </div>           
+        </div>
         
         <div id="question-text-id" class="main-screen-body">
             <p>Какой вид картошки?</p>
