--- a/index.html
+++ b/index.html
@@ -50,11 +50,11 @@
         </div>               
         <div class="rules-screen-body">
             <p>
-                Игрок должен ответить на вопросы о весне 🌸, труде 🛠️, шашлыках 🍢, пикниках 🏞️ и прочих радостях Первомая 🎉.<br>
+                Игрок должен ответить на вопросы о весне, труде, шашлыках, пикниках и прочих радостях Первомая 🎉.<br>
                 <br>
                 За каждый правильный ответ – бонусные баллы в копилку. Но это еще не всё! После 4 и 8 вопросов игрока ждёт «несгораемая сумма» 💰 – можно забрать заработанное и гордо уйти, или рискнуть и дойти до конца викторины.<br>
                 <br>
-                Везунчик, который верно ответит на 10 вопрос, станет обладателем главного приза – 300 бонусных баллов от Суши Мастер 🍣🎁!
+                Везунчик, который верно ответит на 10 вопрос, станет обладателем главного приза – 300 бонусных баллов от Суши Мастер 🎁!
             </p>
         </div>        
         <div class="modal-footer" style="margin-top: 20px;">            
@@ -219,7 +219,7 @@
         <div class="modal-title">
             <p>ПОДСКАЗКА МАСТЕРА СУ</p>
         </div>        
-        <div id="mistersu-hint-text" class="modal-body">
+        <div id="mistersu-hint-text" class="mistersu-hint-body">
             <p>Текст подсказки</p>
         </div>
         <!-- <div id="palki" class="modal-palki">
@@ -243,7 +243,7 @@
             <p>Сегодня знания немного подвели. Но не сдавайся! Завтра – реванш.</p>
         </div>        
         <div class="modal-palki">            
-            <img src="pic/riba.png" alt="riba_pic">
+            <img src="pic/leika.png" alt="leika_pic">
         </div>     
         <div class="modal-footer">            
             <button id="exit-game-lose" class="btn-modal-lose-game-dialog">Попробовать завтра</button>            
@@ -520,24 +520,24 @@ function showMisterSuHint() {
     let randomHintText = quetionsVariant[Math.floor(Math.random() * quetionsVariant.length)];
     document.getElementById("main_questions_screen_id").style.display = "none";
     document.getElementById("mistersuhint").style.display = "block";
-    document.getElementById('mistersu-hint-text').textContent = randomHintText;
+    document.getElementById('mistersu-hint-text').innerHTML = randomHintText;
 }
 
 function getCurrentQuestionListForMisterSu() {
     let correctAnswer = question.correctAnswer
 
     return friendHints = [
-    'Хм... Интересный вопрос. Мой внутренний компас указывает на ' + correctAnswer + ', но... вдруг это ловушка? В общем, решай сам, я лишь скромный наблюдатель за звёздным небом.',
-    'Вероятнее всего, ответ – ' + correctAnswer + '. Но я бы на твоём месте перепроверил всё трижды, а потом ещё раз. На всякий случай. Просто на всякий.',
-    'По моим расчётам (которые, конечно, могут быть слегка неточными), правильный ответ – ' + correctAnswer + '. Но... я бы не стал на этом слишком настаивать. Вдруг это всё заговор?',
-    'Интуиция подсказывает мне ' + correctAnswer + ', но интуиция – штука капризная. Вон, вчера она мне сказала, что дождь будет – а он, видите ли, не пошёл! Задумайся над этим…',
-    'Я вижу... я вижу... Ага! Ответ – ' + correctAnswer + '. Почти наверняка. Но... есть небольшое, совсем крошечное, едва уловимое сомнение...',
-    'Мой магический хрустальный шар (ну, обычный стеклянный, но звучит так круче) показывает ' + correctAnswer + '. Однако, этот шар сегодня немного мутноват. Может, его протереть? Или всё-таки рискнуть?',
-    'Согласно древним свиткам (ну, на самом деле, я это в Википедии прочитал), правильный ответ – ' + correctAnswer + '. Однако, древние свитки часто ошибаются.',
-    'Звёзды намекают на ответ – ' + correctAnswer + ', но я подозреваю, что это всего лишь планетарное выравнивание, которое не имеет отношения к викторине. Или имеет? Загадка!',
-    'Инстинкты кричат "' + correctAnswer + '", но мои инстинкты часто ведут меня к холодильнику, а не к вершинам интеллекта. Сделай выводы.',
-    'Согласно моей тщательно разработанной системе (написанной на салфетке), ответ – ' + correctAnswer + '. Но салфетка немного заляпана соусом терияки. Случайность? Не думаю...',
-    'Логика подсказывает ' + correctAnswer + ', но логика – сухая наука. А жизнь прекрасна и многогранна. Как и выбор вариантов ответов.'
+    'Хм... Интересный вопрос. Мой внутренний компас указывает на <strong>' + correctAnswer + '</strong>, но... вдруг это ловушка? В общем, решай сам, я лишь скромный наблюдатель за звёздным небом.',
+    'Вероятнее всего, ответ – <strong>' + correctAnswer + '</strong>. Но я бы на твоём месте перепроверил всё трижды, а потом ещё раз. На всякий случай. Просто на всякий.',
+    'По моим расчётам (которые, конечно, могут быть слегка неточными), правильный ответ – <strong>' + correctAnswer + '</strong>. Но... я бы не стал на этом слишком настаивать. Вдруг это всё заговор?',
+    'Интуиция подсказывает мне <strong>' + correctAnswer + '</strong>, но интуиция – штука капризная. Вон, вчера она мне сказала, что дождь будет – а он, видите ли, не пошёл! Задумайся над этим…',
+    'Я вижу... я вижу... Ага! Ответ – <strong>' + correctAnswer + '</strong>. Почти наверняка. Но... есть небольшое, совсем крошечное, едва уловимое сомнение...',
+    'Мой магический хрустальный шар (ну, обычный стеклянный, но звучит так круче) показывает <strong>' + correctAnswer + '</strong>. Однако, этот шар сегодня немного мутноват. Может, его протереть? Или всё-таки рискнуть?',
+    'Согласно древним свиткам (ну, на самом деле, я это в Википедии прочитал), правильный ответ – <strong>' + correctAnswer + '</strong>. Однако, древние свитки часто ошибаются.',
+    'Звёзды намекают на ответ – <strong>' + correctAnswer + '</strong>, но я подозреваю, что это всего лишь планетарное выравнивание, которое не имеет отношения к викторине. Или имеет? Загадка!',
+    'Инстинкты кричат "<strong>' + correctAnswer + '</strong>", но мои инстинкты часто ведут меня к холодильнику, а не к вершинам интеллекта. Сделай выводы.',
+    'Согласно моей тщательно разработанной системе (написанной на салфетке), ответ – <strong>' + correctAnswer + '</strong>. Но салфетка немного заляпана соусом терияки. Случайность? Не думаю...',
+    'Логика подсказывает <strong>' + correctAnswer + '</strong>, но логика – сухая наука. А жизнь прекрасна и многогранна. Как и выбор вариантов ответов.'
 ];
 } 
 
